syntax = "proto3";

package user;

service Profile {
    rpc AuthUser (AuthUserRequest) returns (AuthUserReply) {}
    rpc RegisterUser (RegisterRequest) returns (Message) {}
}

message AuthUserRequest {
    string email = 1;
    string password = 2;
}

message AuthUserReply {
    bool isuser = 1;
    UserInfo info = 2;
}

message UserInfo {
    string name = 1;
    string email = 2;
    string roll = 3;
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string roll = 3;
    string password = 4;
}

message Message {
    string message = 1;
}
